@@ -1038,6 +1038,7 @@ namespace Client62
 		IN(face);
 		IN(eyecolor1);
 		IN(eyecolor2);
+		IN(tutorial);
 
 		FINISH_DIRECT_DECODE();
 	}
