@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 10/07/2014 ==
+demonstar55: Identified tutorial flag in all charcreate packets, reworked logic to correctly set homes binds
+
 == 10/05/2014 ==
 Uleat: Added Server<->Corpse slot translators needed for re-enumeration (inactive until phased in)
 
